# qtsample

./: .gitignore  README.md  run
app/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
app/tests/: CMakeLists.txt
